
8.07  2018-11-16
  - Fixed a bug in Mojo::Server::Morbo that prevented the before_server_start
    hook from getting emitted.

8.06  2018-11-07
  - Added support for progress updates to Mojo::IOLoop::Subprocess. (karjala)
  - Added progress method to Mojo::IOLoop::Subprocess. (karjala)
  - Added progress event to Mojo::IOLoop::Subprocess. (karjala)
  - Improved debug, error, fatal, info and warn methods in Mojo::Log to accept
    closures to generate log messages on demand. So expensive code for debugging
    can be deactivated easily in production.
  - Improved Mojo::Log to use the time format "2018-11-08 14:25:5.76027" and to
    include the process id in log messages.
  - Improved Mojolicious performance by up to 10% with more efficient logging.
  - Fixed a problem with the built in templates where an image was missing.

8.05  2018-10-25
  - Deprecated Mojolicious::Plugin::PODRenderer in favor of alternatives from
    CPAN.
  - Deprecated Mojo::Home::mojo_lib_dir.
  - Replaced continue, flash, redirect_to, respond_to and validation methods in
    Mojolicious::Controller with helpers in Mojolicious::Plugin::DefaultHelpers.
  - Updated FAQ with a warning not to use Perl 5.10.x and 5.12.x with
    Mojolicious.

8.04  2018-10-21
  - Added EXPERIMENTAL module Mojo::DynamicMethods. (mst)
  - Replaced all uses of AUTOLOAD with a much faster alternative, so helpers are
    faster by up to 400% and stack traces contain more information. (mst)
  - Removed experimental status from server method in Mojolicious.

8.03  2018-10-16
  - Added support for weak reference accessors to Mojo::Base. (mst)
  - Updated List::Util requirement to 1.41 for set_subname support.
  - Fixed a small bug in Mojo::UserAgent where request timeouts could be created
    twice.
  - Improved Mojo::Exception to include a stack trace in verbose output.
  - Improved Mojolicious::Types to use the correct MIME types for woff and
    woff2 files.

8.02  2018-10-01