@@ -1,5 +1,6 @@
 
 8.07  2018-11-16
+  - Fixed a bug that caused debug log messages to be generated for static files.
   - Fixed a bug in Mojo::Server::Morbo that prevented the before_server_start
     hook from getting emitted.
 
